# AppThere-Loki-Text

./: .git-commit-msg.txt  .gitignore  .prettierignore  CLAUDE.md  README.md  debug_odt.py  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test_xml_mut.rs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: performance.yml  quality.yml
docs/: phase1-completion-report.md  phase1-manual-tests.md
public/locales/ar/: common.json
public/locales/en/: common.json  editor.json
public/locales/fi/: editor.json
scripts/: check-file-sizes.sh  quality-report.sh  validate-locales.js
src/: App.tsx  app.css  app.html  index.css  main.tsx  setupTests.ts
src-svelte/lib/: AboutDialog.svelte  FormatDialog.svelte  InsertMenu.svelte  LandingPage.svelte.bak  PasteDialog.svelte  StyleDialog.svelte  StyleSelect.svelte  settingsStore.ts  smoke.test.ts  styleStore.ts  templates.ts  types.ts
src-svelte/lib/editor/: actions.ts  autocomplete.svelte.ts
src-tauri/: Cargo.toml  SECURITY.md  build_output.txt  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/epub-logic/: Cargo.toml
src-tauri/epub-logic/src/: conversion.rs  css.rs  html.rs  lib.rs  nav.rs  notes.rs  opf.rs  table.rs  tests.rs
src-tauri/formats/common-core/: Cargo.toml
src-tauri/formats/common-core/icc/: sRGB_IEC61966-2-1.icc
src-tauri/formats/common-core/src/: block.rs  inline.rs  lib.rs  marks.rs  metadata.rs  style.rs  tiptap.rs
src-tauri/formats/common-core/src/colour_management/: colour.rs  colour_tests.rs  mod.rs  profile.rs  space.rs  swatch.rs  transform.rs  transform_tests.rs
src-tauri/formats/common-core/src/colour_management/pantone/: mod.rs  pms_coated.rs  pms_metallics.rs
src-tauri/formats/common-core/src/lexical/: mod.rs  node.rs
src-tauri/formats/common-core/tests/: colour_management.rs
src-tauri/formats/odt/: Cargo.toml
src-tauri/formats/odt/benches/: full_pipeline.rs  generators.rs  lexical_conversion.rs  parsing.rs  writing.rs
src-tauri/formats/odt/src/: document.rs  lib.rs  loki_ext.rs  namespaces.rs
src-tauri/formats/odt/src/lexical/: from_lexical.rs  from_lexical_page_break_tests.rs  from_lexical_tests.rs  mod.rs  to_lexical.rs  to_lexical_tests.rs
src-tauri/formats/odt/src/parser/: blocks.rs  inlines.rs  metadata.rs  mod.rs  styles.rs  styles_helpers.rs
src-tauri/formats/odt/src/tiptap/: from_tiptap.rs  from_tiptap_tests.rs  mod.rs  to_tiptap.rs
src-tauri/formats/odt/src/writer/: blocks.rs  content.rs  fodt.rs  inlines.rs  meta.rs  mod.rs  namespaces.rs  styles_utils.rs  styles_writer.rs
src-tauri/formats/odt/tests/: colour_round_trip.rs  integration.rs  level3_error_handling.rs  memory_usage.rs  proptest_roundtrip.rs  round_trip.rs  round_trip_page_breaks.rs  round_trip_writers.rs  session_recovery.rs  style_preservation.rs
src-tauri/formats/odt/tests/error_handling/: extreme_inputs.rs  invalid_xml.rs  missing_elements.rs  mod.rs  unicode_edge_cases.rs
src-tauri/formats/odt/tests/level3/: invalid_xml.rs  mod.rs  security.rs  unicode_edge_cases.rs
src-tauri/formats/odt/tests/security/: mod.rs  vulnerabilities.rs
src-tauri/formats/pdf/: Cargo.toml
src-tauri/formats/pdf/scripts/: verify_pdf.sh
src-tauri/formats/pdf/src/: compress.rs  conformance.rs  error.rs  export_settings.rs  lib.rs
src-tauri/formats/pdf/src/conformance/: iter.rs  mod.rs  text.rs  types.rs  vector.rs
src-tauri/formats/pdf/src/flatten/: groups.rs  mod.rs  raster.rs
src-tauri/formats/pdf/src/fonts/: embed.rs  mod.rs  resolver.rs  subset.rs
src-tauri/formats/pdf/src/fonts/subset/: mod.rs
src-tauri/formats/pdf/src/preexport/: cmyk.rs  mod.rs
src-tauri/formats/pdf/src/writer/: colour.rs  content.rs  image.rs  metadata.rs  mod.rs  page.rs  path_ops.rs  resources.rs  vector.rs
src-tauri/formats/pdf/src/writer/text/: collector.rs  layout.rs  measure.rs  mod.rs  named_styles.rs  operators.rs  para.rs  renderer.rs  style_props.rs
src-tauri/formats/pdf/tests/: fonts.rs  layout.rs  text_writer.rs  text_writer_pages.rs  validator.rs  validator_objects.rs  writer.rs  writer_x1a.rs
src-tauri/formats/pdf/tests/common/: mod.rs
src-tauri/formats/vector-core/: Cargo.toml
src-tauri/formats/vector-core/src/: canvas.rs  colour.rs  convert.rs  document.rs  layer.rs  lib.rs  object.rs  style.rs  svg_writer.rs  svg_writer_tests.rs  transform.rs  units.rs
src-tauri/formats/vector-core/src/svg_parser/: mod.rs  nodes.rs  style_parse.rs
src-tauri/formats/vector-core/src/transform/: mod.rs  parse.rs  tests.rs
src-tauri/formats/vector-core/tests/: colour_serde.rs
src-tauri/odt-logic/: Cargo.toml
src-tauri/odt-logic/src/: lib.rs  tests.rs
src-tauri/src/: fonts.rs  lib.rs  main.rs
src-tauri/src/commands/: android.rs  export.rs  fs.rs  locale.rs  mod.rs  odt_zip.rs  pdf.rs  session.rs  vector.rs
src/assets/templates/: standard.fodt
src/components/: FindReplaceBar.tsx  LandingPage.tsx  SaveIndicator.tsx  TopBar.tsx
src/components/Dialogs/: FileTypeDialog.tsx  ImageDialog.tsx  LinkDialog.tsx  MetadataDialog.tsx  PasteSpecialDialog.tsx  SessionRecovery.tsx  StyleDialog.tsx  StyleDialogAlignmentTab.tsx  StyleDialogStructureTab.tsx  StyleDialogTypographyTab.tsx
src/components/Editor/: Editor.tsx  Toolbar.tsx  ToolbarStyleSelector.tsx  useToolbarState.ts
src/components/VectorEditor/: SoftProofToggle.tsx  VectorEditor.tsx
src/components/ui/: LoadingOverlay.tsx  toast.tsx  toaster.tsx
src/editor/commands/: footnoteCommands.ts
src/i18n/: index.ts  resources.d.ts
src/lib/: AboutDialog.svelte  DebugOverlay.svelte  Editor.svelte  InsertMenu.svelte  LandingPage.svelte  MetadataDialog.svelte  PasteDialog.svelte  SettingsDialog.svelte  StyleDialog.svelte  StyleSelect.svelte  debugStore.ts  recentDocs.ts  settingsStore.ts  styleStore.ts  templates.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.svelte.crashing
src/templates/: Component.tsx
(+115 files in other folders)
