[workspace]
members = ["epub-logic", "formats/common-core", "formats/odt", "formats/vector-core"]

[package]
name = "AppThere-Loki"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "appthere_loki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
odt-format = { path = "formats/odt" }
common-core = { path = "formats/common-core" }
epub-logic = { path = "epub-logic" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
log = "0.4"
zip = "8.0.0"
vector-core = { path = "formats/vector-core" }
