[package]
name = "epub-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
common-core = { path = "../formats/common-core", features = ["colour-management"] }
