[package]
name = "common-core"
version = "0.1.0"
edition = "2021"
description = "Format-agnostic document core types for AppThere Loki"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }

[dependencies.lcms2]
version = "6"
optional = true

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
colour-management = ["dep:lcms2"]

[[test]]
name = "colour_management"
path = "tests/colour_management.rs"
required-features = ["colour-management"]
