[package]
name = "odt-format"
version = "0.1.0"
edition = "2021"
description = "ODT document format parser and writer for AppThere Loki"
license = "Apache-2.0"

[dependencies]
common-core = { path = "../common-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"
quick-xml = "0.37"

[dev-dependencies]
proptest = "1"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "style_preservation"
path = "tests/style_preservation.rs"

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"

[[test]]
name = "proptest_roundtrip"
path = "tests/proptest_roundtrip.rs"
