[package]
name = "odt-format"
version = "0.1.0"
edition = "2021"
description = "ODT document format parser and writer for AppThere Loki"
license = "Apache-2.0"
# Disable auto-discovery so benches/generators.rs is not compiled as a
# standalone benchmark binary (it's a shared helper module, not a bench).
autobenches = false

[dependencies]
common-core = { path = "../common-core", features = ["colour-management"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.20"
quick-xml = "0.37"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "style_preservation"
path = "tests/style_preservation.rs"

[[test]]
name = "round_trip"
path = "tests/round_trip.rs"

[[test]]
name = "round_trip_page_breaks"
path = "tests/round_trip_page_breaks.rs"

[[test]]
name = "proptest_roundtrip"
path = "tests/proptest_roundtrip.rs"

[[test]]
name = "memory_usage"
path = "tests/memory_usage.rs"

[[test]]
name = "error_handling"
path = "tests/error_handling/mod.rs"

[[test]]
name = "security"
path = "tests/security/mod.rs"

[[test]]
name = "session_recovery"
path = "tests/session_recovery.rs"

[[test]]
name = "colour_round_trip"
path = "tests/colour_round_trip.rs"

[[test]]
name = "level3_error_handling"
path = "tests/level3/mod.rs"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "writing"
harness = false

[[bench]]
name = "lexical_conversion"
harness = false

[[bench]]
name = "full_pipeline"
harness = false
