[package]
name = "loki-pdf"
version = "0.1.0"
edition = "2021"
description = "PDF/X validator and writer for AppThere Loki"
license = "Apache-2.0"

[dependencies]
common-core = { path = "../common-core", features = ["colour-management"] }
vector-core = { path = "../vector-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
fnv = "1.0"
pdf-writer = "0.12"

[dev-dependencies]
lopdf = "0.34"

[[test]]
name = "validator"
path = "tests/validator.rs"

[[test]]
name = "writer"
path = "tests/writer.rs"
